<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Android-M2IHM</string>
    <string name="action_settings">Settings</string>
    <string name="btn_label_editeur">Add a Level</string>

    <string name="txt_label_greeting">Watcha want to do?</string>
    <string name="img_desc_background">Background</string>
    <string name="img_desc_glass_background">Glass Background</string>

    <string name="extra_key_level">Level_ID</string>
    <string name="dialog_success_title">Success!</string>
    <string name="dialog_success_msg">You completed level %1$d!\nYour score: %2$d (Highscore: %3$d)\nProceed to level
        %4$d?
    </string>
    <string name="dialog_failure_title">Failure!</string>
    <string name="dialog_failure_msg">Restart?</string>
    <string name="dialog_success_msg_alt">You did it! You completed the very last level. Congrats!</string>
    <string name="dialog_success_restart">Restart</string>
    <string name="action_highscore">Highscores</string>
    <string name="dialog_highscores_title">Highscores</string>
    <string name="dialog_highscores_msg">Level %1$d: %2$d\n</string>
    <string name="dialog_highscores_btn_reset">Reset</string>

    <string name="action_about">About</string>
    <string name="about_images">Images</string>
    <string name="about_images_author_sprites">DANIEL COOK</string>
    <string name="about_images_author_sprites_url">
        http://www.lostgarden.com/2007/04/free-game-graphics-tyrian-ships-and.html
    </string>
    <string name="about_audio">Audio</string>
    <string name="about_audio_fins_url">http://www.freesound.org/people/fins/sounds/133284/</string>
    <string name="about_audio_background_url">http://www.playonloop.com/2013-music-loops/mecha-world/</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_authors">Authors</string>
    <string name="about_authors_content">Vincent Lamouroux, Philipp Schmitt</string>

    <string name="score">Score: %1$d</string>
    <string name="pref_cat_audio">Audio</string>
    <string name="pref_mute">Mute</string>
    <string name="pref_mute_summ">Mute sound if enabled</string>
    <string name="about_sound_win">Winning sound: fins</string>
    <string name="about_music_background">Background Music: mecha-world</string>
    <string name="score_default"/>
    <string name="editeur_start">Player</string>
    <string name="editeur_end">Cible</string>
    <string name="editeur_hole">Hole</string>
    <string name="editeur_gun">Gun</string>
    <string name="editeur_wall">Wall</string>
    <string name="editeur_item_select">Item : %d selected</string>
    <string name="editeur_view_add">Add</string>
    <string name="editeur_view_save">Save</string>
    <string name="editeur_save_name_file">FileName ?</string>
    <string name="editeur_save_error_file">Saving level into : %1$s Error : %2$s</string>
    <string name="editeur_save_succes_file">Saving level into : %1$s Succes</string>
    <string name="editeur_save_error_sdcard_file">is your SDCARD mount ?</string>
    <string name="editeur_file_first_line" tools:ignore="MissingTranslation">#lvl design
        type/x/y/width/height/angle/firerate\n#type :
        p(player)/h(hole)/w(wall)/wa(wall arc)/g(gun)/screen(screensize)\n#first line need to be the screen size of the
        dev devices.\n
    </string>
    <string name="editeur_file_screen_info" tools:ignore="MissingTranslation">screen/0/0/%1$d/%2$d\n</string>
    <string name="moving_content_sdcard">Moving content to the SDCARD</string>
    <string name="extra_key_level_dir" tools:ignore="MissingTranslation">Level_Dir</string>
    <string name="editeur_wall_arc">Wall Arc</string>

    <string name="uploading_content_server">Uploading content</string>
    <string name="donwload_list_lvl">Geting level list</string>
    <string name="donwload_file_lvl">Geting level file</string>
    <string name="main_donwload_level">Dowload Level</string>
    <string name="editeur_rotate_minus" tools:ignore="MissingTranslation">↺</string>
    <string name="editeur_rotate_plus" tools:ignore="MissingTranslation">↻</string>
    <string name="editor_up" tools:ignore="MissingTranslation">↑</string>
    <string name="editor_down" tools:ignore="MissingTranslation">↓</string>
    <string name="editor_left" tools:ignore="MissingTranslation">←</string>
    <string name="editor_right" tools:ignore="MissingTranslation">→</string>
    <string name="editor_height_inc">Height +</string>
    <string name="editor_height_dec">Height -</string>
    <string name="editor_width_inc">Width +</string>
    <string name="editor_width_dec">Width -</string>
    <string name="pref_key_max_lvl">max_lvl</string>
    <string name="pref_cat_engine">Engine</string>
    <string name="pref_bounce">Bounce off walls</string>
    <string name="pref_bounce_summ">Whether to bounce off walls</string>
    <string name="editeur_base_firerate">1000</string>
    <string name="editeur_text_firerate">Firerate ?</string>
</resources>
